@@ -1,0 +1,36 @@
+/*
+ * Copyright 2008 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package powermock.examples.bypassencapsulation;
+
+import java.util.HashSet;
+import java.util.Set;
+
+/**
+ * Class whose purpose is the demonstrate how to use PowerMock to get and set
+ * internal state.
+ */
+public class ServiceHolder {
+
+	private final Set<Object> services = new HashSet<Object>();
+
+	public void addService(Object service) {
+		services.add(service);
+	}
+
+	public void removeService(Object service) {
+		services.remove(service);
+	}
+}
