@@ -10,6 +10,7 @@ Change log 0.8 (under development)
 * Implemented support for nice mocks.
 * Added more documentation
 * expectNew(..).andThrow(..) now works with checked exceptions
+* Added WhiteBox functionality to instantiate a class without invoking its constructor without using byte-code manipulation. Only works on Sun JVM's.
                              
 Change log 0.7 (released)
 -------------------------
